# rust-rocket-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-08-19-025432_create_rustaceans/: up.sql
migrations/2023-08-19-025442_create_crates/: down.sql  up.sql
src/: main.rs  models.rs  repositories.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
